[metadata]
name = notifyexception
author = Shashank Shukla
author-email = shuklashashank@outlook.com
summary = Get exception on ADMINS mail IDs
description-file = README.md
home-page = https://github.com/shuklashashank/notifyexception
license = MIT
classifier =
    Environment :: Web Environment
    Framework :: Django
    Topic :: Exception
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Programming Language :: Python :: 3
    Framework :: Django

[files]
packages = notifyexceptions
